fix: adjust max-height of modals to be percentage based for better display on mobiles

--- a/src/Modal/Modal.scss
+++ b/src/Modal/Modal.scss
@@ -46,7 +46,7 @@
     position: relative;
     flex-direction: column;
     padding: 0;
-    max-height: 95vh;
+    max-height: 90%;
 
     &--small {
       max-width: 280px;
